// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`table-driven built-in launch characterization > freezes the complete 'claude-code' launch plan 1`] = `
{
  "controls": {
    "supportsCancellation": false,
    "supportsPromptAcknowledgement": false,
    "terminalSubmitSequence": "
",
    "waitReplyChannels": [
      "terminal",
    ],
    "waitReplyInput": [
      [
        "permission",
        "allow-once",
        "y",
      ],
      [
        "question",
        "answer",
        "answer",
      ],
      [
        "elicitation",
        "select",
        "choice",
      ],
      [
        "plan_approval",
        "approve-plan",
        "y",
      ],
    ],
  },
  "credentialEnvironmentNames": [
    "ANTHROPIC_API_KEY",
    "CLAUDE_CODE_USE_BEDROCK",
    "CLAUDE_CODE_USE_VERTEX",
  ],
  "enforceConfiguredSessionCommand": [
    "claude",
    "--settings",
    "/overlay/claude-code/settings.json",
    "--mcp-config",
    "/overlay/claude-code/mcp.json",
    "--append-system-prompt-file",
    "/overlay/claude-code/prompts/system.md",
    "--resume",
    "session-one",
    "--model",
    "provider/model-one",
  ],
  "environmentNames": [
    "CLAUDE_CONFIG_DIR",
  ],
  "freshCommand": [
    "claude",
    "--settings",
    "/overlay/claude-code/settings.json",
    "--mcp-config",
    "/overlay/claude-code/mcp.json",
    "--append-system-prompt-file",
    "/overlay/claude-code/prompts/system.md",
    "--model",
    "provider/model-one",
  ],
  "fullOverlay": {
    "commandArguments": [
      "--settings",
      "/overlay/claude-code/settings.json",
      "--mcp-config",
      "/overlay/claude-code/mcp.json",
      "--append-system-prompt-file",
      "/overlay/claude-code/prompts/system.md",
    ],
    "files": [
      {
        "bytes": 6593,
        "mode": 384,
        "ownerKind": "reporter",
        "relativePath": "reporters/status-hook.mjs",
        "sha256": "f9bc383ba06f5fb68ed1220810f10a965a0ec3ac8f007d305cf6ed76c1e6dc96",
      },
      {
        "bytes": 4873,
        "mode": 384,
        "ownerKind": "deny-floor",
        "relativePath": "settings.json",
        "sha256": "cc2886d7c5477dfc67d5454978e4e9a99d9586ea8893991162daed2d813b1759",
      },
      {
        "bytes": 194,
        "mode": 384,
        "ownerKind": "mcp",
        "relativePath": "mcp.json",
        "sha256": "31b0de25ec61159f99972287e5bd4470ed27e9a2b8adabcf67e9817d2ad83e43",
      },
      {
        "bytes": 51,
        "mode": 384,
        "ownerKind": "prompt",
        "relativePath": "prompts/system.md",
        "sha256": "8f58127962dec788d3fb2de5879283fa1070511ea8e4bd0aae002e5ae0332ea8",
      },
    ],
    "generatedIdentities": [
      "reporters/status-hook.mjs",
      "settings.json",
      "mcp.json",
      "prompts/system.md",
    ],
  },
  "mcpDisabledOverlay": {
    "commandArguments": [
      "--settings",
      "/overlay/claude-code/settings.json",
      "--append-system-prompt-file",
      "/overlay/claude-code/prompts/system.md",
    ],
    "environment": {},
    "files": [
      {
        "bytes": 6593,
        "mode": 384,
        "ownerKind": "reporter",
        "relativePath": "reporters/status-hook.mjs",
        "sha256": "f9bc383ba06f5fb68ed1220810f10a965a0ec3ac8f007d305cf6ed76c1e6dc96",
      },
      {
        "bytes": 4873,
        "mode": 384,
        "ownerKind": "deny-floor",
        "relativePath": "settings.json",
        "sha256": "cc2886d7c5477dfc67d5454978e4e9a99d9586ea8893991162daed2d813b1759",
      },
      {
        "bytes": 51,
        "mode": 384,
        "ownerKind": "prompt",
        "relativePath": "prompts/system.md",
        "sha256": "8f58127962dec788d3fb2de5879283fa1070511ea8e4bd0aae002e5ae0332ea8",
      },
    ],
    "generatedIdentities": [
      "reporters/status-hook.mjs",
      "settings.json",
      "prompts/system.md",
    ],
  },
  "nativeSession": {
    "enforceConfiguredResumeArguments": [
      "--resume",
      "session-one",
      "--model",
      "provider/model-one",
    ],
    "referenceKind": "id",
    "referenceValue": "session-one",
    "resumeArguments": [
      "--resume",
      "session-one",
    ],
  },
  "overlayEnvironment": {},
  "piContainedPath": undefined,
  "preserveSessionCommand": [
    "claude",
    "--settings",
    "/overlay/claude-code/settings.json",
    "--mcp-config",
    "/overlay/claude-code/mcp.json",
    "--append-system-prompt-file",
    "/overlay/claude-code/prompts/system.md",
    "--resume",
    "session-one",
  ],
  "provider": "claude-code",
  "recognition": {
    "claudeMakeWrapper": true,
    "direct": true,
    "path": true,
    "unrelated": false,
  },
  "reporter": {
    "coverage": {
      "actionCorrelation": false,
      "effectiveModel": false,
      "heartbeat": false,
      "session": true,
      "tools": true,
      "turns": true,
      "waits": true,
    },
    "events": [
      "session.ready",
      "turn.started",
      "turn.settled",
      "tool.started",
      "tool.finished",
      "tool.failed",
      "wait.opened",
      "wait.closed",
      "compaction.started",
      "compaction.finished",
      "failure.observed",
      "session.ended",
    ],
    "id": "claude-hooks",
    "readinessEvents": [
      "session.ready",
    ],
    "source": "claude-code",
    "version": "2",
  },
  "stateEnvironment": {
    "CLAUDE_CONFIG_DIR": "/state/claude-code",
  },
  "wrapperCommand": [
    "make",
    "claude-copilot",
    "CLAUDE_ARGS='--settings' '/overlay/claude-code/settings.json' '--mcp-config' '/overlay/claude-code/mcp.json' '--append-system-prompt-file' '/overlay/claude-code/prompts/system.md' '--model' 'provider/model-one'",
  ],
}
`;

exports[`table-driven built-in launch characterization > freezes the complete 'copilot' launch plan 1`] = `
{
  "controls": {
    "supportsCancellation": false,
    "supportsPromptAcknowledgement": false,
    "terminalSubmitSequence": "[I
",
    "waitReplyChannels": [
      "terminal",
    ],
    "waitReplyInput": [
      [
        "permission",
        "allow-once",
        "y",
      ],
      [
        "question",
        "answer",
        "answer",
      ],
      [
        "elicitation",
        "select",
        "choice",
      ],
      [
        "plan_approval",
        "approve-plan",
        "y",
      ],
    ],
  },
  "credentialEnvironmentNames": [
    "COPILOT_GITHUB_TOKEN",
    "GH_TOKEN",
    "GITHUB_TOKEN",
  ],
  "enforceConfiguredSessionCommand": [
    "copilot",
    "--plugin-dir",
    "/overlay/copilot/copilot-status-plugin",
    "--additional-mcp-config",
    "@/overlay/copilot/mcp/config.json",
    "--agent",
    "nanasa-status-reporter:nanasa-3836009a6c34f950",
    "--deny-tool=write",
    "--deny-tool=shell",
    "--resume=session-one",
    "--model",
    "provider/model-one",
  ],
  "environmentNames": [
    "COPILOT_CACHE_HOME",
    "COPILOT_HOME",
  ],
  "freshCommand": [
    "copilot",
    "--plugin-dir",
    "/overlay/copilot/copilot-status-plugin",
    "--additional-mcp-config",
    "@/overlay/copilot/mcp/config.json",
    "--agent",
    "nanasa-status-reporter:nanasa-3836009a6c34f950",
    "--deny-tool=write",
    "--deny-tool=shell",
    "--model",
    "provider/model-one",
  ],
  "fullOverlay": {
    "commandArguments": [
      "--plugin-dir",
      "/overlay/copilot/copilot-status-plugin",
      "--additional-mcp-config",
      "@/overlay/copilot/mcp/config.json",
      "--agent",
      "nanasa-status-reporter:nanasa-3836009a6c34f950",
      "--deny-tool=write",
      "--deny-tool=shell",
    ],
    "files": [
      {
        "bytes": 6593,
        "mode": 384,
        "ownerKind": "reporter",
        "relativePath": "copilot-status-plugin/status-hook.mjs",
        "sha256": "f9bc383ba06f5fb68ed1220810f10a965a0ec3ac8f007d305cf6ed76c1e6dc96",
      },
      {
        "bytes": 206,
        "mode": 384,
        "ownerKind": "reporter",
        "relativePath": "copilot-status-plugin/plugin.json",
        "sha256": "57c9b1f43309d00b2ce84493ee71c84d63a83f21169cc99bbabb52f9ea3609ac",
      },
      {
        "bytes": 2324,
        "mode": 384,
        "ownerKind": "reporter",
        "relativePath": "copilot-status-plugin/com.github.copilot/hooks/hooks.json",
        "sha256": "4fb5f0bc5eb230a7b5cd2e356573645d040003ad9243889f264d825317057c40",
      },
      {
        "bytes": 232,
        "mode": 384,
        "ownerKind": "mcp",
        "relativePath": "mcp/config.json",
        "sha256": "5a24ec94e1582b9240ff46d10f285f009faafdb3c016cfa825355fbed92c495f",
      },
      {
        "bytes": 140,
        "mode": 384,
        "ownerKind": "prompt",
        "relativePath": "copilot-status-plugin/com.github.copilot/agents/nanasa-3836009a6c34f950.agent.md",
        "sha256": "c5da8a2f713bf21f3a0bc31ce68a8716b862dca5b21dabc7243cc862ba5023bc",
      },
    ],
    "generatedIdentities": [
      "copilot-status-plugin/status-hook.mjs",
      "copilot-status-plugin/plugin.json",
      "copilot-status-plugin/com.github.copilot/hooks/hooks.json",
      "mcp/config.json",
      "copilot-status-plugin/com.github.copilot/agents/nanasa-3836009a6c34f950.agent.md",
    ],
  },
  "mcpDisabledOverlay": {
    "commandArguments": [
      "--plugin-dir",
      "/overlay/copilot/copilot-status-plugin",
      "--agent",
      "nanasa-status-reporter:nanasa-3836009a6c34f950",
      "--deny-tool=write",
      "--deny-tool=shell",
    ],
    "environment": {},
    "files": [
      {
        "bytes": 6593,
        "mode": 384,
        "ownerKind": "reporter",
        "relativePath": "copilot-status-plugin/status-hook.mjs",
        "sha256": "f9bc383ba06f5fb68ed1220810f10a965a0ec3ac8f007d305cf6ed76c1e6dc96",
      },
      {
        "bytes": 206,
        "mode": 384,
        "ownerKind": "reporter",
        "relativePath": "copilot-status-plugin/plugin.json",
        "sha256": "57c9b1f43309d00b2ce84493ee71c84d63a83f21169cc99bbabb52f9ea3609ac",
      },
      {
        "bytes": 2324,
        "mode": 384,
        "ownerKind": "reporter",
        "relativePath": "copilot-status-plugin/com.github.copilot/hooks/hooks.json",
        "sha256": "4fb5f0bc5eb230a7b5cd2e356573645d040003ad9243889f264d825317057c40",
      },
      {
        "bytes": 140,
        "mode": 384,
        "ownerKind": "prompt",
        "relativePath": "copilot-status-plugin/com.github.copilot/agents/nanasa-3836009a6c34f950.agent.md",
        "sha256": "c5da8a2f713bf21f3a0bc31ce68a8716b862dca5b21dabc7243cc862ba5023bc",
      },
    ],
    "generatedIdentities": [
      "copilot-status-plugin/status-hook.mjs",
      "copilot-status-plugin/plugin.json",
      "copilot-status-plugin/com.github.copilot/hooks/hooks.json",
      "copilot-status-plugin/com.github.copilot/agents/nanasa-3836009a6c34f950.agent.md",
    ],
  },
  "nativeSession": {
    "enforceConfiguredResumeArguments": [
      "--resume=session-one",
      "--model",
      "provider/model-one",
    ],
    "referenceKind": "id",
    "referenceValue": "session-one",
    "resumeArguments": [
      "--resume=session-one",
    ],
  },
  "overlayEnvironment": {},
  "piContainedPath": undefined,
  "preserveSessionCommand": [
    "copilot",
    "--plugin-dir",
    "/overlay/copilot/copilot-status-plugin",
    "--additional-mcp-config",
    "@/overlay/copilot/mcp/config.json",
    "--agent",
    "nanasa-status-reporter:nanasa-3836009a6c34f950",
    "--deny-tool=write",
    "--deny-tool=shell",
    "--resume=session-one",
  ],
  "provider": "copilot",
  "recognition": {
    "claudeMakeWrapper": false,
    "direct": true,
    "path": true,
    "unrelated": false,
  },
  "reporter": {
    "coverage": {
      "actionCorrelation": false,
      "effectiveModel": false,
      "heartbeat": false,
      "session": true,
      "tools": true,
      "turns": true,
      "waits": true,
    },
    "events": [
      "session.ready",
      "turn.started",
      "turn.settled",
      "tool.started",
      "tool.finished",
      "tool.failed",
      "wait.opened",
      "wait.closed",
      "compaction.started",
      "failure.observed",
      "session.ended",
    ],
    "id": "copilot-hooks",
    "readinessEvents": [
      "session.ready",
    ],
    "source": "copilot",
    "version": "2",
  },
  "stateEnvironment": {
    "COPILOT_CACHE_HOME": "/state/copilot/cache",
    "COPILOT_HOME": "/state/copilot",
  },
  "wrapperCommand": undefined,
}
`;

exports[`table-driven built-in launch characterization > freezes the complete 'opencode' launch plan 1`] = `
{
  "controls": {
    "supportsCancellation": false,
    "supportsPromptAcknowledgement": false,
    "terminalSubmitSequence": "
",
    "waitReplyChannels": [
      "terminal",
    ],
    "waitReplyInput": [
      [
        "permission",
        "allow-once",
        "y",
      ],
      [
        "question",
        "answer",
        "answer",
      ],
      [
        "elicitation",
        "select",
        "choice",
      ],
      [
        "plan_approval",
        "approve-plan",
        "y",
      ],
    ],
  },
  "credentialEnvironmentNames": [
    "ANTHROPIC_API_KEY",
    "OPENAI_API_KEY",
    "GOOGLE_GENERATIVE_AI_API_KEY",
  ],
  "enforceConfiguredSessionCommand": [
    "opencode",
    "--agent",
    "nanasa-3836009a6c34f950",
    "--session",
    "session-one",
    "--model",
    "provider/model-one",
  ],
  "environmentNames": [
    "OPENCODE_CONFIG_CONTENT",
    "OPENCODE_CONFIG_DIR",
    "OPENCODE_TUI_CONFIG",
    "XDG_CACHE_HOME",
    "XDG_CONFIG_HOME",
    "XDG_DATA_HOME",
    "XDG_STATE_HOME",
  ],
  "freshCommand": [
    "opencode",
    "--agent",
    "nanasa-3836009a6c34f950",
    "--model",
    "provider/model-one",
  ],
  "fullOverlay": {
    "commandArguments": [
      "--agent",
      "nanasa-3836009a6c34f950",
    ],
    "files": [
      {
        "bytes": 7108,
        "mode": 384,
        "ownerKind": "reporter",
        "relativePath": "plugins/nanasa-status.js",
        "sha256": "1a3a3f6b537148c3ec4a05345051411676800aad2a41dcc33a41fcdd93e9e633",
      },
      {
        "bytes": 1045,
        "mode": 384,
        "ownerKind": "reporter",
        "relativePath": "nanasa-tui-session.js",
        "sha256": "2ddadf8668f5620ce7841852b54a8ab9e1bd9658f50e66840425eb9b5ce3d39b",
      },
      {
        "bytes": 52,
        "mode": 384,
        "ownerKind": "reporter",
        "relativePath": "tui.jsonc",
        "sha256": "34bfe254a87321484c43b5f6a5d7043d515c6159e194a29106d0587db516e97b",
      },
      {
        "bytes": 51,
        "mode": 384,
        "ownerKind": "prompt",
        "relativePath": "prompts/system.md",
        "sha256": "8f58127962dec788d3fb2de5879283fa1070511ea8e4bd0aae002e5ae0332ea8",
      },
      {
        "bytes": 574,
        "mode": 384,
        "ownerKind": "deny-floor",
        "relativePath": "managed-config.json",
        "sha256": "c31906e41885e265f0bf3f0655210198966ac1251205eceb3b009960202e83da",
      },
    ],
    "generatedIdentities": [
      "plugins/nanasa-status.js",
      "nanasa-tui-session.js",
      "tui.jsonc",
      "prompts/system.md",
      "managed-config.json",
    ],
  },
  "mcpDisabledOverlay": {
    "commandArguments": [
      "--agent",
      "nanasa-3836009a6c34f950",
    ],
    "environment": {
      "OPENCODE_CONFIG_CONTENT": "{"plugin":["/overlay/opencode/plugins/nanasa-status.js"],"agent":{"nanasa-3836009a6c34f950":{"description":"Nanasa-managed Reviewer","mode":"primary","prompt":"{file:/overlay/opencode/prompts/system.md}","permission":{"edit":"deny","bash":"deny"}}}}",
      "OPENCODE_CONFIG_DIR": "/state/opencode/xdg-config/opencode",
      "OPENCODE_TUI_CONFIG": "/overlay/opencode/tui.jsonc",
    },
    "files": [
      {
        "bytes": 7108,
        "mode": 384,
        "ownerKind": "reporter",
        "relativePath": "plugins/nanasa-status.js",
        "sha256": "1a3a3f6b537148c3ec4a05345051411676800aad2a41dcc33a41fcdd93e9e633",
      },
      {
        "bytes": 1045,
        "mode": 384,
        "ownerKind": "reporter",
        "relativePath": "nanasa-tui-session.js",
        "sha256": "2ddadf8668f5620ce7841852b54a8ab9e1bd9658f50e66840425eb9b5ce3d39b",
      },
      {
        "bytes": 52,
        "mode": 384,
        "ownerKind": "reporter",
        "relativePath": "tui.jsonc",
        "sha256": "34bfe254a87321484c43b5f6a5d7043d515c6159e194a29106d0587db516e97b",
      },
      {
        "bytes": 51,
        "mode": 384,
        "ownerKind": "prompt",
        "relativePath": "prompts/system.md",
        "sha256": "8f58127962dec788d3fb2de5879283fa1070511ea8e4bd0aae002e5ae0332ea8",
      },
      {
        "bytes": 340,
        "mode": 384,
        "ownerKind": "deny-floor",
        "relativePath": "managed-config.json",
        "sha256": "b157803b4899a019622c1fdef0c6282b4ab1fdb6728e9b49d30d6c21619fdcd2",
      },
    ],
    "generatedIdentities": [
      "plugins/nanasa-status.js",
      "nanasa-tui-session.js",
      "tui.jsonc",
      "prompts/system.md",
      "managed-config.json",
    ],
  },
  "nativeSession": {
    "enforceConfiguredResumeArguments": [
      "--session",
      "session-one",
      "--model",
      "provider/model-one",
    ],
    "referenceKind": "id",
    "referenceValue": "session-one",
    "resumeArguments": [
      "--session",
      "session-one",
    ],
  },
  "overlayEnvironment": {
    "OPENCODE_CONFIG_CONTENT": "{"plugin":["/overlay/opencode/plugins/nanasa-status.js"],"mcp":{"nanasa":{"type":"remote","url":"https://127.0.0.1:3210/mcp","enabled":true,"oauth":false,"headers":{"Authorization":"Bearer {env:NANASA_MCP_TOKEN}"}}},"agent":{"nanasa-3836009a6c34f950":{"description":"Nanasa-managed Reviewer","mode":"primary","prompt":"{file:/overlay/opencode/prompts/system.md}","permission":{"edit":"deny","bash":"deny"}}}}",
    "OPENCODE_CONFIG_DIR": "/state/opencode/xdg-config/opencode",
    "OPENCODE_TUI_CONFIG": "/overlay/opencode/tui.jsonc",
  },
  "piContainedPath": undefined,
  "preserveSessionCommand": [
    "opencode",
    "--agent",
    "nanasa-3836009a6c34f950",
    "--session",
    "session-one",
  ],
  "provider": "opencode",
  "recognition": {
    "claudeMakeWrapper": false,
    "direct": true,
    "path": true,
    "unrelated": false,
  },
  "reporter": {
    "coverage": {
      "actionCorrelation": false,
      "effectiveModel": false,
      "heartbeat": true,
      "session": true,
      "tools": true,
      "turns": true,
      "waits": true,
    },
    "events": [
      "session.ready",
      "turn.started",
      "turn.settled",
      "tool.started",
      "tool.finished",
      "tool.failed",
      "wait.opened",
      "wait.closed",
      "retry.observed",
      "failure.observed",
      "session.ended",
      "heartbeat",
    ],
    "id": "opencode-plugin",
    "readinessEvents": [
      "session.ready",
    ],
    "source": "opencode",
    "version": "2",
  },
  "stateEnvironment": {
    "XDG_CACHE_HOME": "/state/opencode/xdg-cache",
    "XDG_CONFIG_HOME": "/state/opencode/xdg-config",
    "XDG_DATA_HOME": "/state/opencode/xdg-data",
    "XDG_STATE_HOME": "/state/opencode/xdg-state",
  },
  "wrapperCommand": undefined,
}
`;

exports[`table-driven built-in launch characterization > freezes the complete 'pi' launch plan 1`] = `
{
  "controls": {
    "supportsCancellation": false,
    "supportsPromptAcknowledgement": false,
    "terminalSubmitSequence": "
",
    "waitReplyChannels": [
      "terminal",
    ],
    "waitReplyInput": [
      [
        "permission",
        "allow-once",
        "y",
      ],
      [
        "question",
        "answer",
        "answer",
      ],
      [
        "elicitation",
        "select",
        "choice",
      ],
      [
        "plan_approval",
        "approve-plan",
        "y",
      ],
    ],
  },
  "credentialEnvironmentNames": [
    "ANTHROPIC_API_KEY",
    "OPENAI_API_KEY",
    "GEMINI_API_KEY",
  ],
  "enforceConfiguredSessionCommand": [
    "pi",
    "--extension",
    "/overlay/pi/extensions/status.mjs",
    "--extension",
    "/runtime/pi-mcp-adapter/index.ts",
    "--mcp-config",
    "/overlay/pi/mcp.json",
    "--append-system-prompt",
    "/overlay/pi/prompts/system.md",
    "--extension",
    "/overlay/pi/extensions/read-only.mjs",
    "--session",
    "session-one",
    "--model",
    "provider/model-one",
  ],
  "environmentNames": [
    "PI_CODING_AGENT_DIR",
  ],
  "freshCommand": [
    "pi",
    "--extension",
    "/overlay/pi/extensions/status.mjs",
    "--extension",
    "/runtime/pi-mcp-adapter/index.ts",
    "--mcp-config",
    "/overlay/pi/mcp.json",
    "--append-system-prompt",
    "/overlay/pi/prompts/system.md",
    "--extension",
    "/overlay/pi/extensions/read-only.mjs",
    "--model",
    "provider/model-one",
  ],
  "fullOverlay": {
    "commandArguments": [
      "--extension",
      "/overlay/pi/extensions/status.mjs",
      "--extension",
      "/runtime/pi-mcp-adapter/index.ts",
      "--mcp-config",
      "/overlay/pi/mcp.json",
      "--append-system-prompt",
      "/overlay/pi/prompts/system.md",
      "--extension",
      "/overlay/pi/extensions/read-only.mjs",
    ],
    "files": [
      {
        "bytes": 3679,
        "mode": 384,
        "ownerKind": "reporter",
        "relativePath": "extensions/status.mjs",
        "sha256": "de0c54b6f6cc4d75c67bc28365321a3bffb74409d30a7753d34b0b7aa241b8d2",
      },
      {
        "bytes": 311,
        "mode": 384,
        "ownerKind": "mcp",
        "relativePath": "mcp.json",
        "sha256": "6ecba85a390f31c09a8b435f09ed1d42d00b66180bd7ea1b10d9ad6aec052070",
      },
      {
        "bytes": 51,
        "mode": 384,
        "ownerKind": "prompt",
        "relativePath": "prompts/system.md",
        "sha256": "8f58127962dec788d3fb2de5879283fa1070511ea8e4bd0aae002e5ae0332ea8",
      },
      {
        "bytes": 252,
        "mode": 384,
        "ownerKind": "deny-floor",
        "relativePath": "extensions/read-only.mjs",
        "sha256": "41383848a261a411a08103161ae2cbc8a77507dec7b326d89dd592d1e5276813",
      },
    ],
    "generatedIdentities": [
      "extensions/status.mjs",
      "mcp.json",
      "prompts/system.md",
      "extensions/read-only.mjs",
    ],
  },
  "mcpDisabledOverlay": {
    "commandArguments": [
      "--extension",
      "/overlay/pi/extensions/status.mjs",
      "--append-system-prompt",
      "/overlay/pi/prompts/system.md",
      "--extension",
      "/overlay/pi/extensions/read-only.mjs",
    ],
    "environment": {},
    "files": [
      {
        "bytes": 3679,
        "mode": 384,
        "ownerKind": "reporter",
        "relativePath": "extensions/status.mjs",
        "sha256": "de0c54b6f6cc4d75c67bc28365321a3bffb74409d30a7753d34b0b7aa241b8d2",
      },
      {
        "bytes": 51,
        "mode": 384,
        "ownerKind": "prompt",
        "relativePath": "prompts/system.md",
        "sha256": "8f58127962dec788d3fb2de5879283fa1070511ea8e4bd0aae002e5ae0332ea8",
      },
      {
        "bytes": 252,
        "mode": 384,
        "ownerKind": "deny-floor",
        "relativePath": "extensions/read-only.mjs",
        "sha256": "41383848a261a411a08103161ae2cbc8a77507dec7b326d89dd592d1e5276813",
      },
    ],
    "generatedIdentities": [
      "extensions/status.mjs",
      "prompts/system.md",
      "extensions/read-only.mjs",
    ],
  },
  "nativeSession": {
    "enforceConfiguredResumeArguments": [
      "--session",
      "session-one",
      "--model",
      "provider/model-one",
    ],
    "referenceKind": "id",
    "referenceValue": "session-one",
    "resumeArguments": [
      "--session",
      "session-one",
    ],
  },
  "overlayEnvironment": {},
  "piContainedPath": "/state/pi/sessions/one.jsonl",
  "preserveSessionCommand": [
    "pi",
    "--extension",
    "/overlay/pi/extensions/status.mjs",
    "--extension",
    "/runtime/pi-mcp-adapter/index.ts",
    "--mcp-config",
    "/overlay/pi/mcp.json",
    "--append-system-prompt",
    "/overlay/pi/prompts/system.md",
    "--extension",
    "/overlay/pi/extensions/read-only.mjs",
    "--session",
    "session-one",
  ],
  "provider": "pi",
  "recognition": {
    "claudeMakeWrapper": false,
    "direct": true,
    "path": true,
    "unrelated": false,
  },
  "reporter": {
    "coverage": {
      "actionCorrelation": false,
      "effectiveModel": false,
      "heartbeat": true,
      "session": true,
      "tools": true,
      "turns": true,
      "waits": false,
    },
    "events": [
      "session.ready",
      "turn.started",
      "turn.settled",
      "tool.started",
      "tool.finished",
      "tool.failed",
      "compaction.started",
      "compaction.finished",
      "session.ended",
      "heartbeat",
    ],
    "id": "pi-extension",
    "readinessEvents": [
      "session.ready",
    ],
    "source": "pi",
    "version": "2",
  },
  "stateEnvironment": {
    "PI_CODING_AGENT_DIR": "/state/pi",
  },
  "wrapperCommand": undefined,
}
`;
